# duckdb_streamlit_stocks

./: .gitignore  README.md  app.py  landing_page_stocks.py  pyproject.toml
pages/: 0_sql_playground.py  0_trend.py  1_historical_analysis.py  1_sql_playground.py  2_stocks_prediction.py
src/: __init__.py  data_loader.py  data_processor.py  logger.py  predictor.py  visualizer.py
