[tool.poetry]
package-mode = false
name = "duckdb-streamlit-stocks"
version = "0.1.0"
description = "This project is a sandbox to learn duckdb and streamlit by implementing a simple (but possibly structured) application for stocks analysis."
authors = ["ricky <riccardo1.ambrosini@mail.polimi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
duckdb = "^1.1.1"
plotly = "^5.24.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
